fixing issue where controls would show if poster frame was still visible #7

--- a/cu_video_hero_unit/css/cu_video_hero_unit.css
+++ b/cu_video_hero_unit/css/cu_video_hero_unit.css
@@ -2,9 +2,9 @@
 
 .video-hero-unit { background-color: #000; overflow: hidden; position: relative; display: flex; align-items: center; }
 .video-hero-unit .video-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 2; }
-.video-hero-unit .video-hero-poster-frame { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; background-position: center center; background-size: cover; background-repeat: no-repeat; }
+.video-hero-unit .video-hero-poster-frame { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 10; background-position: center center; background-size: cover; background-repeat: no-repeat; }
 .video-hero-unit .video-hero-controls-wrapper { opacity: 0; position: absolute; bottom: 10px; left: 10px; z-index: 5; padding: 10px; background: rgba(0, 0, 0, 0.5); line-height: 100%; transition: opacity 0.5s ease; }
-.video-hero-unit .video-hero-content-wrapper { z-index: 5; position: relative; max-width: 1200px; width: 100%; margin: 0 auto; }
+.video-hero-unit .video-hero-content-wrapper { z-index: 15; position: relative; max-width: 1200px; width: 100%; margin: 0 auto; }
 .video-hero-unit iframe { position: absolute; display: block; width: 1600px; height: 900px; }
 
 .video-hero-unit .video-hero-content { padding: 20px 20px; }
@@ -49,4 +49,4 @@
 @media screen and (min-width: 768px) { .hero-align-left-half .video-hero-content { width: 50%; text-align: left; margin: 0 auto 0 0; }
   .hero-align-right-half .video-hero-content { width: 50%; text-align: left; margin: 0 0 0 auto; } }
 /* Controls */
-.video-hero-unit:hover .video-hero-controls-wrapper { opacity: 1; }
+.video-hero-unit.video-hero-playing:hover .video-hero-controls-wrapper { opacity: 1; }
